--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel": "^2.7.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@morbidick/bootstrap": "^0.4.2",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
