--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ tmp
 parcel-bundle-reports/
 .verdaccio_storage/
 sourcemap-info.json
+yarn.lock*
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
