--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "2.7.0",
-    "parcel": "^2.7.0"
+    "buffer": "^6.0.3",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   },
   "dependencies": {
-    "@morbidick/bootstrap": "^0.4.2",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "moment": "^2.29.4"
