--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4"
   }
 }
