--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "lodash": "^4.17.21",
+    "modal-video": "^2.4.8",
     "moment": "^2.29.4"
   }
 }
