--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 baseUrl: "https://api.themoviedb.org/3/",
 baseImgUrl: "http://image.tmdb.org/t/p/",
 apiKey: "ea4c56d50a17f4673be5e41527930787",
-sessionId: "topaolmaysakkalkal",
+sessionId: "32e3b16676ea9ce67da73771185e2637bd7b81a7",
