--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.7.0",
+    "@parcel/transformer-sass": "2.8.0",
     "buffer": "^6.0.3",
     "parcel": "^2.7.0",
     "process": "^0.11.10"
