--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "buffer": "^6.0.3",
+    "@parcel/transformer-sass": "2.8.0",
+    "buffer": "^5.5.0",
     "parcel": "^2.7.0",
     "process": "^0.11.10"
   },
