--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.2",
     "lodash": "^4.17.21",
     "modal-video": "^2.4.8",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "yarn": "^1.22.19"
   }
 }
